# spmspv-adaptive

./: README.md
execution-environment-info/: README.md  k40-env.out  p100-env.out  v100-environment.out
hice-spmspv/: .gitignore
hice-spmspv/hice/la/: CMakeLists.txt
hice-spmspv/hice/la/include/: mv.h
hice-spmspv/hice/la/include/spmspv/: class.hpp  config.h  mtx.hpp  readsvmdata.cpp  readsvmdata.hpp  scan_config.h
hice-spmspv/hice/la/include/spmspv/csc-spmspv/: sparse_vec.h  spmspv.h
hice-spmspv/hice/la/include/spmspv/csc-spmspv/detail/: common.h  util.h
hice-spmspv/hice/la/include/spmspv/csc-spmspv/detail/device/: bitvector.h  csc_bucket_load_balance_spmspv.cuh  csc_bucket_spmspv.cuh  csc_sort_load_balance.cuh  csc_sort_load_balance_fuse.cuh  csc_sort_load_balance_fuse_reduction.cuh  csc_sort_load_balance_fuse_reduction_modify.cuh  csc_sort_load_balance_modify.cuh  csc_sort_scan_fuse.cuh  csc_sort_spmspv.cuh  csc_sort_spmspv_before_myscan.cuh  csc_two_layer_load_balance.cuh  csc_two_layer_load_balance_fuse_reduction.cuh  csc_two_layer_load_balance_fuse_reduction_modify.cuh  csc_two_layer_load_balance_ver1.cuh  csc_two_layer_load_balance_ver2.cuh  csr5_spmspv.h  csr5_spmv_cuda.h  format_conversion.h  hola_common.cuh  hola_common.h  holaspmv.h  meta_utils.h  multi_arch_build.h  naivespmv.h  scan_kernel.cuh  utils_kernel.h
hice-spmspv/hice/la/script/spmspv/: run_application_adaptive.sh  run_bfs_predict.sh  run_generate_mat_feature.sh  run_generate_model_data.sh  run_holaspmv.sh  run_statistic.sh
hice-spmspv/hice/la/src/: holaspmv.cu-origin  mv.c
hice-spmspv/hice/la/test/: CMakeLists.txt  csr5_spmspv_test.cu  generate_feature.cu  generate_model_data.cu  generate_model_data_model3.cu  mv_test.c  my_spmspv_adaptive_test.cu  my_spmspv_application_test.cu  my_spmspv_test.cu  new_test_app.cu  statistic.cu  test_application.cu  test_application_model3.cu  test_coo2hybrid.cu  test_csr2csc.cu  test_holaspmv.cu  test_sort_spmspv.cu  test_vector_format_conversion.cu
model/: 1-analyze.py  1-generate_matrix_class.py  1-test-gbdt.py  1-test-randomforest.py  1-test-svm.py  1-test_dtree.py  2-analyze.py  2-generate_matrix_class.py  2-test-gbdt.py  2-test-randomforest.py  2-test-svm.py  2-test_dtree.py  3-analyze.py  3-generate_matrix_class.py  3-test-gbdt.py  3-test-randomforest.py  3-test-svm.py  3-test_dtree.py  README.md
